// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Long Info Panel 1`] = `
<div
  className="panel panel-default"
>
  <table
    className="table table-bordered"
  >
    <thead>
      <tr
        className="active"
      >
        <th>
          Servings
        </th>
        <th>
          Prep time
        </th>
        <th>
          Cooking time
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            className="input-group print-hidden"
          >
            <div
              className="form-group"
            >
              <div
                className="input-group"
              >
                <input
                  className="form-control"
                  id="servings"
                  name="servings"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
              </div>
            </div>
            <span
              className="input-group-btn"
            >
              <button
                className="btn btn-outline-primary"
                disabled={false}
                onClick={[MockFunction]}
                type="button"
              >
                <i
                  className="bi bi-x-square-fill size-1x"
                />
              </button>
            </span>
          </div>
          <p
            className="print-only"
          >
            200000
          </p>
        </td>
        <td>
          200000
           
          minutes
        </td>
        <td>
          200000
           
          minutes
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="panel-body"
  >
    <p
      className="body1"
    >
      Lorem ipsum dolor sit amet, odio sem vel nulla aliquam, vestibulum pellentesque at risus eros, at leo mi urna quam, magna nunc vestibulum nibh condimentum arcu. Eu nunc blandit arcu magna, morbi eleifend dolor, nam ratione justo ullamcorper platea malesuada donec, fusce luctus varius. Vel ipsum nunc in justo, pulvinar magna interdum ut nunc vestibulum. Lorem dui vitae. Lectus elit vel lorem purus, in tortor, mi diam mus venenatis sit bibendum eu. Odio nec lectus quisquam ac eleifend sem, arcu congue neque neque nunc, nam maecenas, nec mauris pede erat dignissim, in gravida tempor. In amet mauris odio vitae montes. Nec vitae nostrud vestibulum, at in tincidunt justo varius wisi ut, nullam wisi erat lorem tempor ac. Lorem ipsum dolor sit amet, odio sem vel nulla aliquam, vestibulum pellentesque at risus eros, at leo mi urna quam, magna nunc vestibulum nibh condimentum arcu. Eu nunc blandit arcu magna, morbi eleifend dolor, nam ratione justo ullamcorper platea malesuada donec, fusce luctus varius. Vel ipsum nunc in justo, pulvinar magna interdum ut nunc vestibulum. Lorem dui vitae. Lectus elit vel lorem purus, in tortor, mi diam mus venenatis sit bibendum eu. Odio nec lectus quisquam ac eleifend sem, arcu congue neque neque nunc, nam maecenas, nec mauris pede erat dignissim, in gravida tempor. In amet mauris odio vitae montes. Nec vitae nostrud vestibulum, at in tincidunt justo varius wisi ut, nullam wisi erat lorem tempor ac.
    </p>
  </div>
</div>
`;

exports[`Short Info Panel 1`] = `
<div
  className="panel panel-default"
>
  <table
    className="table table-bordered"
  >
    <thead>
      <tr
        className="active"
      >
        <th>
          Servings
        </th>
        <th>
          Prep time
        </th>
        <th>
          Cooking time
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            className="input-group print-hidden"
          >
            <div
              className="form-group"
            >
              <div
                className="input-group"
              >
                <input
                  className="form-control"
                  id="servings"
                  name="servings"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
              </div>
            </div>
            <span
              className="input-group-btn"
            >
              <button
                className="btn btn-outline-primary"
                disabled={false}
                onClick={[MockFunction]}
                type="button"
              >
                <i
                  className="bi bi-x-square-fill size-1x"
                />
              </button>
            </span>
          </div>
          <p
            className="print-only"
          >
            8
          </p>
        </td>
        <td>
          40
           
          minutes
        </td>
        <td>
          20
           
          minutes
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="panel-body"
  >
    <p
      className="body1"
    >
      This is a test!
    </p>
  </div>
</div>
`;
